[package]
authors = ["Caesar Chad <caesar@bitconch.io>"]
edition = "2018"
name = "soros-wallet"
description = "Blockchain, Rebuilt for Scale"
version = "1.1.2"
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"

[dependencies]
bincode = "1.1.3"
bs58 = "0.2.0"
clap = "2.33.0"
chrono = { version = "0.4.0", features = ["serde"] }
dirs = "1.0.5"
log = "0.4.2"
num-traits = "0.2"
serde_json = "1.0.39"
soros-budget-api = { path = "../programs/budget_api", version = "1.1.2"   }
soros-client = { path = "../client", version = "1.1.2"   }
soros-drone = { path = "../drone", version = "1.1.2"   }
soros-logger = { path = "../logger", version = "1.1.2"   }
soros-netutil = { path = "../netutil", version = "1.1.2"   }
soros-sdk = { path = "../sdk", version = "1.1.2"   }
soros-vote-api = { path = "../programs/vote_api", version = "1.1.2"   }
soros-vote-signer = { path = "../vote-signer", version = "1.1.2"   }

[dev-dependencies]
soros-budget-program = { path = "../programs/budget_program", version = "1.1.2"   }
soros = { path = "../core", version = "1.1.2"   }

[features]
cuda = []
erasure = []
