[package]
name = "soros-bpf-programs"
description = "Blockchain, Rebuilt for Scale"
version = "0.14.2"
documentation = "https://docs.rs/soros"
homepage = "https://soros.com/"
readme = "README.md"
repository = "https://github.com/soros-labs/soros"
authors = ["Soros Maintainers <maintainers@soros.com>"]
license = "Apache-2.0"
edition = "2018"

[features]
bpf_c = []
bpf_rust = []

[build-dependencies]
walkdir = "2"

[dependencies]
bincode = "1.1.3"
byteorder = "1.3.1"
elf = "0.0.10"
soros_rbpf = "=0.1.10"
soros-bpfloader = { path = "../bpf_loader", version = "0.14.2"   }
soros-logger = { path = "../../logger", version = "0.14.2"   }
soros-runtime = { path = "../../runtime", version = "0.14.2"   }
soros-sdk = { path = "../../sdk", version = "0.14.2"   }

[[bench]]
name = "bpf_loader"
