[package]
name = "soros-bpf-programs"
description = "Blockchain, Rebuilt for Scale"
version = "1.1.2"
documentation = "https://docs.rs/soros"
homepage = "https://soros.com/"
readme = "README.md"
repository = "https://github.com/soros-labs/soros"
authors = ["Soros Maintainers <maintainers@soros.com>"]
license = "Apache-2.0"
edition = "2018"

[features]
bpf_c = []
bpf_rust = []

[build-dependencies]
walkdir = "2"

[dependencies]
bincode = "1.1.3"
byteorder = "1.3.1"
elf = "0.0.10"
bvm_filter = "=1.0.0"
soros-bpfloader = { path = "../bpf_loader", version = "1.1.2"   }
soros-logger = { path = "../../logger", version = "1.1.2"   }
soros-runtime = { path = "../../runtime", version = "1.1.2"   }
soros-sdk = { path = "../../sdk", version = "1.1.2"   }

[[bench]]
name = "bpf_loader"
