[package]
name = "soros-bpfloader"
version = "0.14.2"
description = "Soros BPF Loader"
authors = ["Soros Maintainers <maintainers@soros.com>"]
repository = "https://github.com/soros-labs/soros"
license = "Apache-2.0"
homepage = "https://soros.com/"
edition = "2018"

[dependencies]
bincode = "1.1.3"
byteorder = "1.3.1"
libc = "0.2.51"
log = "0.4.2"
soros_rbpf = "=0.1.10"
serde = "1.0.90"
soros-logger = { path = "../../logger", version = "0.14.2"   }
soros-sdk = { path = "../../sdk", version = "0.14.2"   }

[lib]
name = "soros_bpf_loader"
crate-type = ["lib", "cdylib"]
