[package]
name = "soros-bpfloader"
version = "1.1.2"
description = "Soros BPF Loader"
authors = ["Caesar Chad <caesar@bitconch.io>"]
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"
edition = "2018"

[dependencies]
bincode = "1.1.3"
byteorder = "1.3.1"
libc = "0.2.51"
log = "0.4.2"
bvm_filter = "=1.0.0"
serde = "1.0.90"
soros-logger = { path = "../../logger", version = "1.1.2"   }
soros-sdk = { path = "../../sdk", version = "1.1.2"   }

[lib]
name = "soros_bpf_loader"
crate-type = ["lib", "cdylib"]
