[package]
name = "soros-budget-program"
version = "0.12.3"
description = "Bitconch budget program"
authors = ["Bitconch Dev Team"]
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io"
edition = "2018"

[dependencies]
bincode = "1.1.2"
chrono = { version = "0.4.0", features = ["serde"] }
log = "0.4.2"
serde = "1.0.89"
serde_derive = "1.0.89"
soros-budget-api = { path = "../budget_api", version = "0.12.3" }
soros-logger = { path = "../../logger", version = "0.12.3" }
soros-sdk = { path = "../../sdk", version = "0.12.3" }

[dev-dependencies]
soros-runtime = { path = "../../runtime", version = "0.12.3" }

[lib]
name = "soros_budget_program"
crate-type = ["cdylib"]

